--- a/admin/css/navbar.css
+++ b/admin/css/navbar.css
@@ -1,4 +1,15 @@
 body {
-	position: relative;
-	top: 70px;
+	padding-top: 70px;
+}
+
+.user_img {
+	text-align: center;
+}
+img {
+	width: 100px;
+	height: 100px;
+	margin: 0 auto;
+	-webkit-border-radius: 50% !important;
+	-moz-border-radius: 50% !important;
+	border-radius: 50% !important;
 }
